fixed font family causing scrollbar to appear

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ section {
 
 .attribution {
     position: absolute;
-    bottom: 0px;
+    bottom: 5px;
     margin-right: auto;
     margin-left: auto;
     left: 0px;
